# article-summaries

./: .gitignore  LICENSE  README.md
backend/: .env.sample  Dockerfile  Makefile  app.py  config.py  docker-compose.yaml  pyproject.toml
backend/article_summaries/: __init__.py  app.py  config.py  models.py
backend/article_summaries/apps/account/: views.py
backend/article_summaries/apps/admin/: views.py
backend/article_summaries/apps/article/: views.py
backend/article_summaries/apps/auth/: views.py
backend/article_summaries/apps/core/: views.py
backend/article_summaries/apps/summary/: functions.py  views.py
backend/article_summaries/apps/summary/summarizers/: LSA.py  Luhn.py  SumUtil.py
backend/article_summaries/migrations/versions/: b21ce69dea1d_test_migration.py
backend/article_summaries/sql/: init.sql
backend/migrations/versions/: 68a0a365b2da_a.py  92edf470d6b0_test_migration.py  f536a1eb5e8c_init.py
backend/sql/: init.sql
backend/tests/: conftest.py
backend/tests/functional/: test_admin.py  test_article.py  test_auth.py  test_core.py  test_summary.py
backend/tests/non_functional/: locustfile.py
backend/tests/unit/: test_auth.py  test_models.py  test_sumarizers.py  test_summarizer.py
backendv2/: app.py  getdataset.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js
frontend/src/api/: axiosInstance.js
frontend/src/components/: AdminPanel.js  AppFooter.js  AppNavbar.js  ArticlePanel.js  AuthContext.js  LoginPage.js  MainPage.js  ProfilePanel.js  RegisterPage.js  ToastProvider.js  Token.js
frontend/src/resources/: times-normal.js
frontend/src/styles/: AdminPanel.css  AppFooter.css  AppNavbar.css  ArticlePanel.css  (+2 more)
summarizer/: summarizer.py
