[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["oskarolaszczyk <oskarolaszczyk@gmail.com>"]
readme = "README.md"
packages = [
    { include = "article_summaries"}
]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
